--- a/_posts/2020-04-04-Work.md
+++ b/_posts/2020-04-04-Work.md
@@ -4,6 +4,7 @@ author: emi
 category: lifestyle
 title: "Work"
 tag: harmony
+image: no_image.jpg
 sitemap:
     lastmod: 2020-04-12
     priority: 0.25
