update stage one github.com/kissjgabi/kiss

--- a/_posts/2020-04-04-Health.md
+++ b/_posts/2020-04-04-Health.md
@@ -2,9 +2,12 @@
 layout: post
 author: emi
 category: lifestyle
-title: "Health"
-tag: harmony
-image: no_image.jpg
+title: health
+meta: make it simply
+shortcontent: Instead of agonizing make it simply
+tag: [mentoring, coaching]
+image:
+subtitle:
 sitemap:
     lastmod: 2020-04-12
     priority: 0.25
