--- a/_posts/2020-04-04-Work.md
+++ b/_posts/2020-04-04-Work.md
@@ -2,9 +2,12 @@
 layout: post
 author: emi
 category: lifestyle
-title: "Work"
-tag: harmony
-image: no_image.jpg
+title: work
+meta: make it simply
+shortcontent: Keep emails to 5 sentences or less, make it simply
+tag: [mentoring, coaching]
+image:
+subtitle:
 sitemap:
     lastmod: 2020-04-12
     priority: 0.25
